# mogpack

./: .gitignore  MANIFEST.in  README.md  nitpick-style.toml  pyproject.toml
src/mogpack/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_cli.py
