[project]
name = "mogpack"
version = "0.1.0"
description = "Reusable Python development tooling and configuration package with strict quality standards"
authors = [{ name = "Matthew Gulliver", email = "hello@matthewgulliver.com" }]
keywords = ['python', 'development', 'tooling', 'configuration', 'nitpick', 'testing', 'quality']
requires-python = ">=3.10,<4.0"
dependencies = [
    "nitpick>=0.35.0",
    "mutmut>=3.3.1",
    "testcontainers>=4.13.0",
    "assertpy>=1.1",
    "types-assertpy>=1.1.0.20250502",
    "pytest-testdox>=3.1.0",
    "pytest>=7.2.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "deptry>=0.23.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "python-dotenv>=1.2.1",
    "toml>=0.10.2",
]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/matthewgulliver/mogpack"
Repository = "https://github.com/matthewgulliver/mogpack"
Documentation = "https://github.com/matthewgulliver/mogpack"

[project.scripts]
mogpack = "mogpack.cli:main"


[tool.mypy]
plugins = "pydantic.mypy"
files = ["src"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--testdox", "--cov"]
markers = ["domain:", "app:", "contract:", "e2e"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY"]

[tool.mutmut]
debug = true
paths_to_mutate = ["src/"]
do_not_mutate = ["*__init__*"]
pytest_add_cli_args_test_selection = ["-m", "not (paid or slow or e2e)"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mogpack"]

[tool.hatch.build.targets.wheel.force-include]
"nitpick-style.toml" = "mogpack/nitpick-style.toml"

[tool.nitpick]
style = ["nitpick-style.toml"]
ignore_styles = []
